--- a/exercise-08.qmd
+++ b/exercise-08.qmd
@@ -20,7 +20,7 @@ library(skimr)
 skim(d) # generate summary statistics
 ```
 
-## Step 2
+## Step 2: Plot brain size as a function of other variables
 
 ```{r}
 library(ggplot2)
@@ -34,10 +34,10 @@ p4 <- ggplot(d, aes(x=Repro_lifespan, y=ECV)) +
   geom_point()
 
 library(patchwork)
-(p1 | p2)/ (p3 | p4) + plot_annotation(tag_levels = "A")
+(p1 | p2)/ (p3 | p4) + plot_annotation(tag_levels = "I")
 ```
 
-## Step 3
+## Step 3: Manually derive beta coefficents for brain size as a function of social group size
 
 ```{r}
 x <- d$Group_size
@@ -48,18 +48,20 @@ complete_data <- complete.cases(x,y)
 x <- x[complete_data]
 y <- y[complete_data]
 
-print(beta1 <- cov(x, y) / var(x)) # slope
-print(beta0 <- mean(y) - beta1 * mean(x)) # y-intercept
+(beta1 <- cov(x, y) / var(x)) # slope
+(beta0 <- mean(y) - beta1 * mean(x)) # y-intercept
 ```
 
-## Step 4
+## Step 4: Use 'lm()' to get beta coefficents
+
+The beta coefficents using the 'lm()' function as the same as those manually calculated in Step 3.
 
 ```{r}
 m <- lm(ECV~Group_size, data=d)
 summary(m)
 ```
 
-## Step 5
+## Step 5: 
 
 ```{r}
 c <- filter(d, Taxonomic_group == "Catarrhini")
@@ -77,7 +79,12 @@ summary(ms)
 ## Step 6
 
 ```{r}
+library(broom)
+m.summary <- tidy(m)
 
+(std_error <- m.summary$std.error[2]) # standard error
+(p_value <- m.summary$p.value[2]) # p value
+(CI <- confint(m, level = 0.95)[2,]) # 95% CI
 ```
 
 ## Step 7
