--- a/exercise-08.qmd
+++ b/exercise-08.qmd
@@ -61,33 +61,71 @@ m <- lm(ECV~Group_size, data=d)
 summary(m)
 ```
 
-## Step 5: 
+## Step 5:
 
 ```{r}
-c <- filter(d, Taxonomic_group == "Catarrhini")
-p <- filter(d, Taxonomic_group == "Platyrrhini")
-s <- filter(d, Taxonomic_group == "Strepsirhini")
+catarrhini <- filter(d, Taxonomic_group == "Catarrhini")
+platyrrhini <- filter(d, Taxonomic_group == "Platyrrhini")
+strepsirhini <- filter(d, Taxonomic_group == "Strepsirhini")
 
-mc <- lm(ECV~Group_size, data=c)
-summary(mc)
-mp <- lm(ECV~Group_size, data=p)
-summary(mp)
-ms <- lm(ECV~Group_size, data=s)
-summary(ms)
+m_catarrhini <- lm(ECV~Group_size, data=catarrhini)
+summary(m_catarrhini)
+m_platyrrhini <- lm(ECV~Group_size, data=platyrrhini)
+summary(m_platyrrhini)
+m_strepsirhini <- lm(ECV~Group_size, data=strepsirhini)
+summary(m_strepsirhini)
 ```
 
-## Step 6
+## Step 6:
 
 ```{r}
 library(broom)
-m.summary <- tidy(m)
+tidy_m <- broom::tidy(m)
 
-(std_error <- m.summary$std.error[2]) # standard error
-(p_value <- m.summary$p.value[2]) # p value
+(std_error <- tidy_m |>
+  filter(term == "Group_size") |>
+  pull(std.error))
+
+(p_value <- tidy_m |>
+  filter(term == "Group_size") |>
+  pull(p.value))
+
 (CI <- confint(m, level = 0.95)[2,]) # 95% CI
 ```
 
-## Step 7
+## Step 7a
+
+```{r}
+library(infer)
+
+alpha <- 0.05
+confidence_level <- 1 - alpha
+p_lower <- alpha/2
+p_upper <- 1 - (alpha/2)
+degrees_of_freedom <- nrow(d) - 2
+critical_value <- qt(p_upper, df = degrees_of_freedom)
+
+obs_slope <- tidy_m |>
+  filter(term == "Group_size") |>
+  pull(estimate)
+
+nperm <- 1000
+perm <- d |>
+  # specify model
+  specify(ECV~Group_size) |>
+  # use a null hypothesis of independence
+  hypothesize(null = "independence") |>
+  # generate permutation replicates
+  generate(reps = nperm, type = "permute") |>
+  # calculate the slope statistic
+  calculate(stat = "slope")
+# calculate se as sd of permutation distribution
+perm.se <- sd(perm$stat)
+# visualize
+visualize(perm) + shade_p_value(obs_stat = obs_slope, direction = "two_sided")
+```
+
+## Step 7b
 
 ```{r}
 
@@ -97,4 +135,20 @@ m.summary <- tidy(m)
 
 ```{r}
 
+library(infer)
+
+boot.slope <- d |>
+  specify(ECV~Group_size) |>
+  generate(reps = 1000, type = "bootstrap") |>
+  calculate(stat = "slope")
+
+quantile(probs = c(0.025, 0.975), boot.slope$stat)
+
+CI <- function(x, level = 0.95) {
+    alpha <- 1 - level
+    ci <- mean(x) + c(-1, 1) * qnorm(1 - (alpha/2)) * sqrt(var(x)/length(x))
+    return(ci)
+}
+
+print(CI(boot.slope$stat))
 ```
